// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render as another element 1`] = `
<h3
  class="components-truncate wp-components-truncate components-text wp-components-text components-heading wp-components-heading css-ypbzir"
  data-g2-c16t="true"
  data-g2-component="Heading"
>
  Some people are worth melting for.
</h3>
`;

exports[`props should render correctly 1`] = `
<div
  class="components-truncate wp-components-truncate components-text wp-components-text components-heading wp-components-heading css-ohvggs"
  data-g2-c16t="true"
  data-g2-component="Heading"
>
  Some people are worth melting for.
</div>
`;

exports[`props should render size 1`] = `
<div
  class="components-truncate wp-components-truncate components-text wp-components-text components-heading wp-components-heading css-ypbzir"
  data-g2-c16t="true"
  data-g2-component="Heading"
>
  Some people are worth melting for.
</div>
`;
